# The-Resistance

./: AGENTS.md  BUIDL.md  Cargo.toml  GAMEPLAY.md  GAME_DESIGN.md  LOG.md  NEXT_PLANS.md  PERK_MECHANICS_EXPLAINER.md  README.md  REFERENCE_BREAKDOWN.md  THE_RESISTANCE_ARCHITECTURE.md  UI_MIGRATION_LOG.md  compcircuit.nr  last.md
3-d-galaxy-simulation/: package-lock.json
3-d-galaxy-simulation/app/: layout.tsx  page.tsx
3-d-galaxy-simulation/components/: loader.tsx  star-system.tsx
circuits/: Nargo.toml  ONCHAIN_PROOF.md  Prover.toml  cli_onchain_test.sh  compute_hash.mjs  full_onchain_test.mjs  package-lock.json  package.json  submit_onchain.mjs  test_full_onchain.mjs  test_game_flow.mjs  test_onchain_flow.mjs  verify_zk_flow.mjs
circuits/src/: main.nr
contracts/the-resistance/: Cargo.toml  README.md
contracts/the-resistance/src/: lib.rs  test.rs
contracts/the-resistance/tests/: verifier_compat.rs
contracts/ultrahonk-soroban-verifier/: Cargo.toml
scripts/: deploy-the-resistance-sdk.ts  deploy.ts  run-localnet-unlimited-e2e.sh  set-the-resistance-vk.ts
the-resistance-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
the-resistance-frontend/public/: circuits.json  game-studio-config.js
the-resistance-frontend/scripts/: e2e-onchain-proof-check.ts  generate-vk.ts
the-resistance-frontend/src/: App.tsx  config.ts  index.css  main.tsx  polyfills.ts
the-resistance-frontend/src/components/: Layout.css  Layout.tsx  WalletSwitcher.css
the-resistance-frontend/src/shims/: pino.ts
(+16 files in other folders)
