[package]
name = "the-resistance"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
ultrahonk_soroban_verifier = { path = "../ultrahonk-soroban-verifier", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
